Added TrackerChart data API call
