# service/DefaultService.js
@@ -28,6 +28,25 @@ exports.indexTrackerQueryGetAllTrackersGET = function() {
   });
 }
 
+exports.indexTrackerQueryGetChartDataGET = function(id) {
+  return new Promise(async function(resolve, reject) {
+    var results = [];
+    var db = mongoUtil.getDb();
+    var trackers = db.collection('TrackerChartData').find({trackerId: id});
+
+    await trackers.forEach(tr => {
+      console.log("Trackers: " + JSON.stringify(tr));
+      results.push(tr);
+    });
+ 
+    if (results.length > 0) {
+      resolve(results);
+    } else {
+      resolve();
+    }
+  });
+}
+
 
 
 
